<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/take04"
    tools:context="brav0.ezit_app.login">

    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/gifImageView"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/app_icon1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp" />

    <EditText
        android:id="@+id/email"
        android:layout_width="389dp"
        android:layout_height="42dp"
        android:layout_marginTop="37dp"
        android:ems="10"
        android:hint="@string/l4"
        android:inputType="textEmailAddress"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="355dp"
        android:layout_below="@+id/textView15"
        android:layout_centerHorizontal="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="389dp"
        android:layout_height="42dp"
        android:layout_alignStart="@+id/email"
        android:layout_below="@+id/email"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/l5"
        android:inputType="textPassword"
        android:textColor="@color/cardview_light_background"
        android:textColorHint="@color/cardview_light_background"
        tools:layout_editor_absoluteX="11dp"
        tools:layout_editor_absoluteY="413dp" />

    <Button
        android:id="@+id/btn_login"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/l6"
        android:layout_marginBottom="19dp"
        android:layout_above="@+id/signInButton"
        android:layout_centerHorizontal="true" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="15dp"></com.google.android.gms.common.SignInButton>

    <Button
        android:id="@+id/btn_existing"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:text="Sign In"
        android:layout_above="@+id/textView7"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/btn_login"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="52dp"
        android:text="New Users Click Sign Up"
        android:textColor="@color/cardview_light_background" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/gifImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:fontFamily="casual"
        android:text="Making stuff appear at you doorstep"
        android:textColor="@color/cardview_light_background" />

</RelativeLayout>
